--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "swapi-starships-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://narainsagar.github.io/swapi-starships-app",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -21,7 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "npm run build && gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
