Revert "update tab title"
This reverts commit 31e8631f6538a8c53db64a75b7a70b6f8ef1c726.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Starships App",
-  "name": "Swapi Starships App",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
