--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "swapi-starships-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://narainsagar.github.io/swapi-starships-app",
+  "homepage": "https://narainsagar.github.io/swapi-starships-app",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
